--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       2 slices of bread
     </li>
     <li>
-      
+      4 slices of cheese
     </li>
     <li>
-      
+      1 tbsp of butter
     </li>
   </ul>
 
