--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
   <ul>
     <li>
       2 slices of bread
-      <ul></ul>
+      
     </li>
     <li>
       4 slices of cheese
+      <ul>
+        <li>
+          cheddar
+        </li>
+        <li>
+          mozzarella
+        </li>
+        <li>
+          pepper jack
+        </li>
+      </ul>
     </li>
     <li>
       1 tbsp of butter
